--- a/.github/workflows/ci-build-push.yml
+++ b/.github/workflows/ci-build-push.yml
@@ -31,11 +31,45 @@ jobs:
                     ${{ secrets.DOCKER_USERNAME }}/cicd-app-pb:latest
                     ${{ secrets.DOCKER_USERNAME }}/cicd-app-pb:${{ github.sha }}
                     
-    # esse job vai ser criado após o manifesto Kubernetes            
     update-gitops-manifest:
         runs-on: ubuntu-latest
         needs: build-and-push
         steps:
-            - name: Deploy placeholder
-              run: echo "Deploying application.."
+          - name: Configure SSH
+            uses: webfactory/ssh-agent@v0.9.0
+            with:
+              ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+          - name: Add GitHub to known_hosts
+            run: ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+          - name: Clone GitOps repository
+            run: git clone git@github.com:devbrunofernandes/cicd-manifests-pb.git gitops-repo
+
+          - name: Configure Git
+            working-directory: ./gitops-repo
+            run: |
+              git config --global user.name 'GitHub Actions'
+              git config --global user.email 'actions@github.com'
+
+          - name: Install Kustomize
+            run: |
+              curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash
+              sudo mv kustomize /usr/local/bin/
+
+          - name: Update image tag in manifest
+            working-directory: ./gitops-repo/k8s
+            run: kustomize edit set image ${{ secrets.DOCKER_USERNAME }}/cicd-app-pb:${{ github.sha }}
+          
+          - name: Commit and push changes
+            working-directory: ./gitops-repo
+            run: |
+              git add k8s/kustomization.yml
+              
+              if ! git diff --staged --quiet; then
+                git commit -m "Atualizado a tag da imagem da aplicação para ${{ github.sha }}"
+                git push
+              else
+                echo "Sem mudanças no código. A tag da imagem já está atualizada."
+              fi
     
