--- a/.github/workflows/ci-build-push.yml
+++ b/.github/workflows/ci-build-push.yml
@@ -1,75 +1,113 @@
 name: CI Build Push
 on: 
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - main
 jobs:
-    build-and-push:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Repo checkout
-              uses: actions/checkout@v5
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Repo checkout
+        uses: actions/checkout@v5
 
-            - name: Login Docker hub
-              uses: docker/login-action@v3
-              with:
-                username: ${{ secrets.DOCKER_USERNAME }}
-                password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+        
+      - name: Install lint dependencies
+        run: pip install ruff
 
-            - name: Set up QEMU
-              uses: docker/setup-qemu-action@v3
+      - name: Run linter
+        run: ruff check .
 
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
+  test:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Repo checkout
+        uses: actions/checkout@v5
 
-            - name: Build and push
-              uses: docker/build-push-action@v6
-              with:
-                context: .
-                push: true
-                tags: |
-                    ${{ secrets.DOCKER_USERNAME }}/cicd-app-pb:latest
-                    ${{ secrets.DOCKER_USERNAME }}/cicd-app-pb:${{ github.sha }}
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+        
+      - name: Install test dependencies
+        run: |
+          pip install pytest "fastapi[testclient]"
+          pip install -r requirements.txt
+
+      - name: Run tests
+        run: python -m pytest
+
+  build-and-push:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Repo checkout
+        uses: actions/checkout@v5
+
+      - name: Login Docker hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/cicd-app-pb:latest
+            ${{ secrets.DOCKER_USERNAME }}/cicd-app-pb:${{ github.sha }}
                     
-    update-gitops-manifest:
-        runs-on: ubuntu-latest
-        needs: build-and-push
-        steps:
-          - name: Configure SSH
-            uses: webfactory/ssh-agent@v0.9.0
-            with:
-              ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+  update-gitops-manifest:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+      - name: Configure SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-          - name: Add GitHub to known_hosts
-            run: ssh-keyscan github.com >> ~/.ssh/known_hosts
+      - name: Add GitHub to known_hosts
+        run: ssh-keyscan github.com >> ~/.ssh/known_hosts
 
-          - name: Clone GitOps repository
-            run: git clone git@github.com:devbrunofernandes/cicd-manifests-pb.git gitops-repo
+      - name: Clone GitOps repository
+        run: git clone git@github.com:devbrunofernandes/cicd-manifests-pb.git gitops-repo
 
-          - name: Configure Git
-            working-directory: ./gitops-repo
-            run: |
-              git config --global user.name 'GitHub Actions'
-              git config --global user.email 'actions@github.com'
+      - name: Configure Git
+        working-directory: ./gitops-repo
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
 
-          - name: Install Kustomize
-            run: |
-              curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash
-              sudo mv kustomize /usr/local/bin/
+      - name: Install Kustomize
+        run: |
+          curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash
+          sudo mv kustomize /usr/local/bin/
 
-          - name: Update image tag in manifest
-            working-directory: ./gitops-repo/k8s
-            run: kustomize edit set image ${{ secrets.DOCKER_USERNAME }}/cicd-app-pb:${{ github.sha }}
+      - name: Update image tag in manifest
+        working-directory: ./gitops-repo/k8s
+        run: kustomize edit set image ${{ secrets.DOCKER_USERNAME }}/cicd-app-pb:${{ github.sha }}
+      
+      - name: Commit and push changes
+        working-directory: ./gitops-repo
+        run: |
+          git add k8s/kustomization.yml
           
-          - name: Commit and push changes
-            working-directory: ./gitops-repo
-            run: |
-              git add k8s/kustomization.yml
-              
-              if ! git diff --staged --quiet; then
-                git commit -m "Atualizado a tag da imagem da aplicação para ${{ github.sha }}"
-                git push
-              else
-                echo "Sem mudanças no código. A tag da imagem já está atualizada."
-              fi
-    
+          if ! git diff --staged --quiet; then
+            git commit -m "Atualizado a tag da imagem da aplicação para ${{ github.sha }}"
+            git push
+          else
+            echo "Sem mudanças no código. A tag da imagem já está atualizada."
+          fi
+  
