--- a/.github/workflows/ci-build-push.yml
+++ b/.github/workflows/ci-build-push.yml
@@ -35,7 +35,7 @@ jobs:
         
       - name: Install test dependencies
         run: |
-          pip install pytest "fastapi[testclient]"
+          pip install pytest httpx
           pip install -r requirements.txt
 
       - name: Run tests
